# pjecz-hercules-flask

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  appserver.py  main.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: gcloud-app-deploy.yaml
cli/: app.py
cli/commands/: alimentar_autoridades.py  alimentar_distritos.py  alimentar_domicilios.py  alimentar_estados.py  alimentar_materias.py  alimentar_modulos.py  alimentar_municipios.py  alimentar_oficinas.py  alimentar_permisos.py  alimentar_roles.py  alimentar_usuarios.py  alimentar_usuarios_roles.py  cmd_arc_documentos.py  cmd_audiencias.py  cmd_autoridades.py  cmd_bitacoras.py  cmd_cid_formatos.py  cmd_cid_procedimientos.py  cmd_db.py  cmd_edictos.py  cmd_exh_exhortos.py  cmd_exh_exhortos_actualizaciones.py  cmd_exh_exhortos_promociones.py  cmd_exh_externos.py  cmd_fin_vales.py  cmd_funcionarios.py  cmd_gcsecretmanager.py  cmd_google_ai_studio.py  cmd_inv_equipos.py  cmd_nom_personas.py  cmd_ofi_documentos.py  cmd_permisos.py  cmd_reportes_bd.py  cmd_repsvm.py  cmd_req_requisiciones.py  cmd_requisiciones_pdf.py  cmd_sentencias.py  cmd_soportes_tickets.py  cmd_ubicaciones_expedientes.py  cmd_usuarios.py  (+26 more)
config/: settings.py
hercules/: app.py  extensions.py
hercules/blueprints/abogados/: forms.py  models.py  views.py
hercules/blueprints/arc_archivos/: forms.py  views.py
hercules/blueprints/arc_documentos/: forms.py  models.py  views.py
hercules/blueprints/arc_documentos_bitacoras/: models.py  views.py
hercules/blueprints/arc_documentos_tipos/: forms.py  models.py  views.py
hercules/blueprints/arc_juzgados_extintos/: forms.py  models.py  views.py
hercules/blueprints/arc_remesas/: forms.py  models.py  views.py
hercules/blueprints/arc_remesas_bitacoras/: models.py  views.py
hercules/blueprints/arc_remesas_documentos/: forms.py  models.py  views.py
hercules/blueprints/arc_solicitudes/: forms.py  models.py  views.py
hercules/blueprints/arc_solicitudes_bitacoras/: models.py  views.py
hercules/blueprints/audiencias/: forms.py  models.py  views.py
hercules/blueprints/autoridades/: forms.py  models.py  views.py
hercules/blueprints/autoridades_funcionarios/: models.py  views.py
hercules/blueprints/bitacoras/: models.py  tasks.py  views.py
hercules/blueprints/bitacoras_apis/: models.py  views.py
hercules/blueprints/centros_trabajos/: models.py  views.py
hercules/blueprints/cid_areas/: forms.py  models.py  views.py
hercules/blueprints/cid_areas_autoridades/: models.py  views.py
hercules/blueprints/cid_formatos/: forms.py  models.py  tasks.py  views.py
hercules/blueprints/cid_procedimientos/: forms.py  models.py  task.py  tasks.py  views.py
hercules/blueprints/distritos/: forms.py  models.py  views.py
hercules/blueprints/domicilios/: forms.py  models.py  views.py
hercules/blueprints/edictos/: forms.py  models.py  views.py
hercules/blueprints/edictos_acuses/: models.py  views.py
hercules/blueprints/entradas_salidas/: models.py  views.py
hercules/blueprints/estados/: models.py  views.py
hercules/blueprints/exh_areas/: forms.py  models.py  views.py
hercules/blueprints/exh_exhortos/: forms.py  models.py  tasks.py  views.py
hercules/blueprints/exh_exhortos_actualizaciones/: forms.py  models.py  tasks.py  views.py
hercules/blueprints/exh_exhortos_archivos/: forms.py  models.py  views.py
hercules/blueprints/exh_exhortos_partes/: forms.py  models.py  views.py
hercules/blueprints/exh_exhortos_promociones/: forms.py  models.py  tasks.py  views.py
hercules/blueprints/exh_exhortos_promociones_archivos/: forms.py  models.py  views.py
hercules/blueprints/exh_exhortos_promociones_promoventes/: forms.py  models.py  views.py
hercules/blueprints/exh_exhortos_promoventes/: forms.py  models.py  views.py
hercules/blueprints/exh_exhortos_respuestas/: forms.py  models.py  tasks.py  views.py
hercules/blueprints/exh_exhortos_respuestas_archivos/: forms.py  models.py  views.py
hercules/blueprints/exh_exhortos_respuestas_videos/: forms.py  models.py  views.py
hercules/blueprints/exh_exhortos_videos/: forms.py  models.py  views.py
hercules/blueprints/exh_externos/: forms.py  models.py  tasks.py  views.py
hercules/blueprints/exh_tipos_diligencias/: models.py  views.py
hercules/blueprints/fin_vales/: forms.py  models.py  tasks.py  views.py
hercules/blueprints/funcionarios/: forms.py  models.py  tasks.py  views.py
hercules/blueprints/funcionarios_oficinas/: forms.py  models.py  views.py
hercules/blueprints/glosas/: forms.py  models.py  views.py
hercules/blueprints/identidades_generos/: forms.py  models.py  views.py
hercules/blueprints/inv_categorias/: forms.py  models.py  views.py
hercules/blueprints/inv_componentes/: forms.py  models.py  views.py
hercules/blueprints/inv_custodias/: forms.py  models.py  tasks.py  views.py
hercules/blueprints/inv_equipos/: forms.py  models.py  tasks.py  views.py
hercules/blueprints/inv_equipos_fotos/: forms.py  models.py  views.py
hercules/blueprints/inv_marcas/: forms.py  models.py  views.py
lib/: cryptography.py  fechas.py  folio.py  google_cloud_storage.py  pwgen.py  safe_next_url.py  safe_string.py  storage.py  tasks.py  time_to_text.py  time_utc.py  universal_mixin.py  wtforms.py
(+582 files in other folders)
