[tool.poetry]
name = "pjecz-hercules-flask"
version = "2.1.1"
description = "Hercules es la segunda version de la Plataforma Web hecha con Flask."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
cryptography = "^44.0.0"
email-validator = "^2.1.1"
flask = "^3.1.0"
flask-login = "^0.6.3"
flask-moment = "^1.0.5"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.4.1"
flask-wtf = "^1.2.2"
google-auth = "^2.37.0"
google-cloud-secret-manager = "^2.21.0"
google-cloud-storage = "^2.19.0"
google-cloud = "^0.34.0"
google-generativeai = "^0.8.3"
gunicorn = "^23.0.0"
hashids = "^1.3.1"
jinja2 = "^3.1.3"
markdown = "^3.7"
openpyxl = "^3.1.5"
passlib = "^1.7.4"
pdfkit = "^1.0.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
quill-delta = {version = "^1.0.3", extras = ["html"]}
rq = "^1.16.2"
sendgrid = "^7.0.0rc2"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
unidecode = "^1.3.8"
uvicorn = "^0.32.1"
werkzeug = "^3.1.2"
wtforms = "^3.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
faker = "^28.4.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"
pytest = "^8.2.2"
pylint = "^3.3.1"
pylint-sqlalchemy = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
