[project]
name = "pjecz-hercules-flask"
version = "0.1.0"
description = "Hercules es la segunda version de la Plataforma Web hecha con Flask."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.2",
    "cryptography>=46.0.6",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-moment>=1.0.6",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "google-auth>=2.49.1",
    "google-cloud>=0.34.0",
    "google-cloud-secret-manager>=2.27.0",
    "google-cloud-storage>=3.10.1",
    "gunicorn>=25.3.0",
    "hashids>=1.3.1",
    "jinja2>=3.1.6",
    "lxml[html-clean]>=6.0.2",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "pdfkit>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytz>=2026.1.post1",
    "rq>=2.7.0",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "tabulate>=0.10.0",
    "unidecode>=1.4.0",
    "uvicorn>=0.44.0",
    "werkzeug>=3.1.8",
    "xhtml2pdf>=0.2.17",
]

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportCallIssue = "hint"
reportMissingImports = "warning"
reportUndefinedVariable = "warning"
exclude = ["**/tests"]

[tool.ruff]
ignore = ["F821"]
line-length = 128
